fixed bug where last added unit not visible in sidebar

--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -44,6 +44,9 @@
 .sidebar {
     width: 0px;
     height: 100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     position: fixed;
     z-index: 10;
     overflow-x: hidden;
@@ -63,15 +66,6 @@
 
     &--true {
         width: 200px;
-    }
-
-    &__inner {
-        height: 100%;
-        width: 100%;
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-
     }
 
     &__showButton{
