--- a/src/Components/UnitList/UnitList.scss
+++ b/src/Components/UnitList/UnitList.scss
@@ -3,6 +3,7 @@
 .unitList {
     &__box {
         width: 100%;
+        margin-bottom: 40px;
     }
 
     &__item{
